--- a/ShootingMethod.ipynb
+++ b/ShootingMethod.ipynb
@@ -3,9 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyPvmpqDLFPtvMhaHQszz7sA",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -17,25 +15,15 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/BinaryBeast-007/Solution-of-the-Falkner-Skan-equation-Boundary-Layer-Theory-using-the-Shooting-Method./blob/main/ShootingMethod.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 47,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 472
         },
         "id": "uBQr32ey9Qzr",
-        "outputId": "cce478b0-4fd2-4500-e8c5-66ca9f3d6757"
+        "outputId": "9f8945b1-af32-4eb1-974a-d01cf7c339b1"
       },
       "outputs": [
         {
